--- a/src/about.html
+++ b/src/about.html
@@ -83,9 +83,15 @@
     </nav>
     <!-- end of navigation -->
     <!-- start hero -->
-    <section aria-roledescription="banner" class="hero is-black is-medium is-hidden-mobile">
-        <div class="hero-body">
-        </div>
+    <section aria-roledescription="banner" class="hero is-black is-medium mt-6">
+        <header class="hero-body has-text-centered my-6">
+            <h1 class="title">
+                The Rosy Arc
+            </h1>
+            <p class="subtitle is-size-4 is-size-5-mobile">
+                A Memorable Passage of Time
+            </p>
+        </header>
     </section>
     <!-- end hero -->
     <main>
@@ -93,8 +99,7 @@
         <!-- start of inspire -->
         <section class="section">
             <header class="has-text-centered my-6">
-                <h1 class="is-size-2 has-text-weight-bold">The Rosy Arc</h1>
-                <p class="subtitle is-italic">a memorable passage of time</p>
+                <h2 class="is-size-2 has-text-weight-bold">Design</h2>
             </header>
             <!-- start of two columns -->
             <div class="section">
@@ -103,7 +108,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <figure class="image is-3by2">
-                                    <img srcset="images/about/purple-flowers.webp  654w,
+                                    <img src="images/about/purple-flowers-small.webp" srcset="images/about/purple-flowers.webp  654w,
                              images/about/purple-flowers-small.webp 366w" sizes="(max-width: 450px) 366px"
                                         alt="purple white and red saddle">
                                 </figure>
