--- a/src/diy-cemetery-bouquet.html
+++ b/src/diy-cemetery-bouquet.html
@@ -96,31 +96,21 @@
     </nav>
     <!-- end of navigation -->
     <!-- start hero -->
-    <section aria-roledescription="banner" class="hero is-black is-medium is-hidden-mobile">
-        <div class="hero-body">
-        </div>
+    <section aria-roledescription="banner" class="hero is-black is-medium mt-6">
+        <header class="hero-body has-text-centered my-6">
+            <h1 class="title">
+                DIY Cemetery Bouquet
+            </h1>
+            <p class="subtitle is-size-4 is-size-5-mobile">
+                We've made hundreds of ground vase bouquets. This is a
+                simple guide in creating your own cemetery bouquet.
+            </p>
+        </header>
     </section>
     <!-- end hero -->
     <!-- start of main content -->
     <main>
         <article>
-            <!-- start of article title -->
-            <section class="section is-flex is-justify-content-center has-text-centered">
-                <header class="my-6">
-                    <div class="block">
-                        <h1 class="is-size-2 is-size-3-mobile has-text-weight-bold">
-                            DIY Cemetery Bouquets
-                        </h1>
-                    </div>
-                    <div class="block">
-                        <p class="is-size-3 is-size-4-mobile">
-                            We've made hundreds of ground vase bouquets. This is a
-                            simple guide in creating your own cemetery bouquet.
-                        </p>
-                    </div>
-                </header>
-            </section>
-            <!-- end of article title -->
             <!-- start of step 1 -->
             <section
                 class="section has-background-light is-flex is-flex-direction-column is-justify-content-center is-align-items-center has-text-centered">
@@ -373,7 +363,7 @@
                 </header>
                 <!-- start of handhelds -->
                 <header class="my-6">
-                    <h4 class="is-size-3 is-size-4-mobile has-text-weight-bold">Using Handhelds</h4>
+                    <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold">Using Handhelds</h3>
                 </header>
                 <figure class="image">
                     <img src="https://m.media-amazon.com/images/I/61bBTf33dqL._AC_SX425_.jpg" alt="hotwire tool kit"
@@ -455,7 +445,7 @@
                 <!-- end of handhelds -->
                 <!-- start of tabletops -->
                 <header class="my-6">
-                    <h4 class="is-size-3 is-size-4-mobile has-text-weight-bold">Using Tabletops</h4>
+                    <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold">Using Tabletops</h3>
                 </header>
                 <figure class="image">
                     <img src="https://m.media-amazon.com/images/I/716XC-m0iZL._AC_SX425_.jpg" alt="hotwire tabletop"
