--- a/src/gallery.html
+++ b/src/gallery.html
@@ -83,9 +83,15 @@
     </nav>
     <!-- end of navigation -->
     <!-- start hero -->
-    <section aria-roledescription="banner" class="hero is-black is-medium is-hidden-mobile">
-        <div class="hero-body">
-        </div>
+    <section aria-roledescription="banner" class="hero is-black is-medium mt-6">
+        <header class="hero-body has-text-centered my-6">
+            <h1 class="title">
+                Rosy Arc Gallery
+            </h1>
+            <p class="subtitle is-size-4 is-size-5-mobile">
+                View many of our arrangements in various colors.
+            </p>
+        </header>
     </section>
     <!-- end hero -->
     <main>
@@ -100,7 +106,7 @@
                                 <i class="fa-solid fa-image fa-xl"></i>
                             </span>
                             <span>
-                                <h3 class="title">Gallery</h3>
+                                <h2 class="title">Images</h2>
                             </span>
                         </span>
                     </div>
@@ -116,7 +122,7 @@
                                 <i class="fa-solid fa-warehouse fa-xl"></i>
                             </span>
                             <span>
-                                <h3 class="title">Inventory</h3>
+                                <h2 class="title">Inventory</h2>
                             </span>
                         </span>
                     </div>
