--- a/src/index.html
+++ b/src/index.html
@@ -83,12 +83,12 @@
     </nav>
     <!-- end of navigation -->
     <!-- start of hero -->
-    <section aria-roledescription="banner" class="hero is-black is-fullheight">
-        <div class="hero-body">
+    <section aria-roledescription="banner" class="hero is-black is-fullheight-with-navbar">
+        <header class="hero-body">
             <div class="container has-text-white has-text-centered">
                 <h1 class="is-size-2 has-text-weight-semibold">Your source for silk flower arrangements</h1>
             </div>
-        </div>
+        </header>
     </section>
     <!-- end of hero -->
     <main>
@@ -104,7 +104,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <figure class="image is-3by2">
-                                    <img srcset="images/index/design-arrangement.webp  632w,
+                                    <img src="images/index/design-arrangement-small.webp" srcset="images/index/design-arrangement.webp  632w,
                              images/index/design-arrangement-small.webp 374w" sizes="(max-width: 450px) 374px"
                                         alt="purple white and red saddle" loading="lazy">
                                 </figure>
@@ -173,7 +173,8 @@
                         <div class="tabs is-toggle is-centered">
                             <div class="container">
                                 <ul id="measurement-list">
-                                    <li class="is-active" data-target="bouquets"><a title="View Bouquet Details">Bouquets</a></li>
+                                    <li class="is-active" data-target="bouquets"><a
+                                            title="View Bouquet Details">Bouquets</a></li>
                                     <li data-target="saddles"><a title="View Saddle Details">Saddles</a></li>
                                     <li data-target="memorials"><a title="View Memorial Details">Memorials</a></li>
                                 </ul>
@@ -226,7 +227,7 @@
                         <div class="card" data-target="bouquets">
                             <div class="card-image">
                                 <figure class="image is-3by2">
-                                    <img srcset="images/index/red-bouquet01.webp  834w,
+                                    <img src="images/index/red-bouquet01-small.webp" srcset="images/index/red-bouquet01.webp  834w,
                          images/index/red-bouquet01-small.webp 425w" sizes="(max-width: 450px) 425px"
                                         alt="blue and white bouquet" loading="lazy">
                                 </figure>
@@ -235,7 +236,7 @@
                         <div class="card is-hidden" data-target="saddles">
                             <div class="card-image">
                                 <figure class="image is-3by2">
-                                    <img srcset="images/index/purple-saddle01.webp  696w,
+                                    <img src="images/index/purple-saddle01-small.webp" srcset="images/index/purple-saddle01.webp  696w,
                          images/index/purple-saddle01-small.webp 398w" sizes="(max-width: 450px) 398px"
                                         alt="purple saddle" loading="lazy">
                                 </figure>
@@ -244,7 +245,7 @@
                         <div class="card is-hidden" data-target="memorials">
                             <div class="card-image">
                                 <figure class="image is-3by2">
-                                    <img srcset="images/index/white-cross01.webp  578w,
+                                    <img src="images/index/white-cross01-small.webp" srcset="images/index/white-cross01.webp  578w,
                          images/index/white-cross01-small.webp 416w" sizes="(max-width: 450px) 416px" alt="white cross"
                                         loading="lazy">
                                 </figure>
@@ -272,7 +273,8 @@
                             You can view some of our previous
                             designs on our gallery page.
                         </p>
-                        <a class="has-text-light button is-medium is-success block" href="gallery.html" title="Rosy Arc Gallery">
+                        <a class="has-text-light button is-medium is-success block" href="gallery.html"
+                            title="Rosy Arc Gallery">
                             <span class="icon">
                                 <i class="fa-regular fa-images"></i>
                             </span>
@@ -286,7 +288,8 @@
                             our store page on Ebay.
                         </p>
                         <a class="has-text-light button is-medium is-success block"
-                            href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener follow" title="View Ebay Store">
+                            href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener follow"
+                            title="View Ebay Store">
                             <span class="icon">
                                 <i class="fa-solid fa-store"></i>
                             </span>
@@ -300,7 +303,8 @@
                             to keep up to date with our latest designs.
                         </p>
                         <a class="has-text-light button is-medium is-success block"
-                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener follow" title="View Pinterest">
+                            href="https://www.pinterest.com/ihavearosyarc/" target="_blank" rel="noopener follow"
+                            title="View Pinterest">
                             <span>Follow on </span>
                             <span class="icon">
                                 <i class="fa-brands fa-pinterest"></i>
@@ -343,7 +347,8 @@
             </div>
             <!-- end of 3 columns-->
             <div class="has-text-centered">
-                <a class="has-text-light button is-large is-primary has-background-primary mb-6" href="about.html" title="Rosy Arc About">
+                <a class="has-text-light button is-large is-primary has-background-primary mb-6" href="about.html"
+                    title="Rosy Arc About">
                     <span class="icon">
                         <i class="fa-solid fa-circle-check"></i>
                     </span>
